--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
                 <li><a href="/">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <!--current_user-->
+                <!--TODO current_user-->
                 <!--
                 判断条件中的变量 current_user 由 Flask-Login 定义，且在视图函数和模板中自动可用。
                 这个变量的值是当前登录的用户，如果用户尚未登录，则是一个匿名用户代理对象。如果
