--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
-{% block title %}主页{% endblock %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}Flasky{% endblock %}
+
 {% block page_content %}
-    <h1>这是首页</h1>
-    <p>现在的时间是： {{ moment(current_time).format('LLL') }}.</p>
-    <p>{{ moment(current_time).fromNow(refresh=True) }}</p>
+<div class="page-header">
+    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    {% if not known %}
+    <p>Pleased to meet you!</p>
+    {% else %}
+    <p>Happy to see you again!</p>
+    {% endif %}
+</div>
+{{ wtf.quick_form(form) }}
 {% endblock %}
