--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,15 +5,15 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Login</h1>
+    <h1>登录</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
 </div>
 <p>
-New user?
+新用户?
 <a href="{{ url_for('auth.register') }}">
-Click here to register
+点击注册
 </a>
 </p>
 {% endblock %}
