--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -13,8 +13,8 @@
         Check your inbox, you should have received an email with a confirmation link.
     </p>
     <p>
-        Need another confirmation email?
-        <a href="{{ url_for('auth.resend_confirmation') }}">Click here</a>
+        是否需要再发送一封确认邮件?
+        <a href="{{ url_for('auth.resend_confirmation') }}">点击发送</a>
     </p>
 </div>
 {% endblock %}
