--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,10 +22,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/">主页</a></li>
                 {% if current_user.is_authenticated %}
                 <li>
-                    <a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
+                    <a href="{{ url_for('main.user', username=current_user.username) }}">简介</a>
                 </li>
                 {% endif %}
             </ul>
@@ -38,9 +38,9 @@
                 已经登录
             -->
                 {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
                 {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                <li><a href="{{ url_for('auth.login') }}">登录</a></li>
                 {% endif %}
             </ul>
         </div>
