--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+
 {% block page_content %}
 <div class="page-header">
     <h1>{{ user.username }}</h1>
@@ -15,8 +17,11 @@
     <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
     {% endif %}
     {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+    {% if user == current_user %}
+    <a href="{{ url_for('.edit_profile') }}" class="btn btn-default">编辑资料</a>
+    {% endif %}
     <p>
-        Member since {{ moment(user.member_since).format('L') }}.
+        Member since {{ moment(user.member_since).format('LLL') }}.
         Last seen {{ moment(user.last_seen).fromNow() }}.
     </p>
 </div>
