--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -20,6 +20,10 @@
     {% if user == current_user %}
     <a href="{{ url_for('.edit_profile') }}" class="btn btn-default">编辑资料</a>
     {% endif %}
+    {% if current_user.is_administrator() %}
+    <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
+        Edit Profile [Admin]</a>
+    {% endif %}
     <p>
         Member since {{ moment(user.member_since).format('LLL') }}.
         Last seen {{ moment(user.last_seen).fromNow() }}.
