--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,12 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}TuntunPy{% endblock %}
+{% block title %}AutumnLife{% endblock %}
 
 {% block head %}
     {{ super() }}
     <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
 
 {% block navbar %}
@@ -18,7 +19,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">TuntunPy</a>
+            <a href="/" class="navbar-brand">AutumnLife</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -38,7 +39,17 @@
                 已经登录
             -->
                 {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img src="{{ current_user.gravatar(size=35) }}">
+                        {{ current_user.username }} <b class="caret"></b>
+                    </a>
+
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
+                        <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
+                    </ul>
+                </li>
                 {% else %}
                 <li><a href="{{ url_for('auth.login') }}">登录</a></li>
                 {% endif %}
