--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -2,32 +2,34 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>{{ user.username }}</h1>
-    {% if user.name or user.location %}
-    <p>
-        {% if user.name %}{{ user.name }}{% endif %}
-        {% if user.location %}
-            From <a href="http://maps.google.com/?q={{ user.location }}">
-                {{ user.location }}
-            </a>
+    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+    <div class="profile-header">
+        <h1>{{ user.username }}</h1>
+        {% if user.name or user.location %}
+        <p>
+            {% if user.name %}{{ user.name }}{% endif %}
+            {% if user.location %}
+                From <a href="http://maps.google.com/?q={{ user.location }}">
+                    {{ user.location }}
+                </a>
+            {% endif %}
+        </p>
         {% endif %}
-    </p>
-    {% endif %}
-    {% if current_user.is_administrator() %}
-    <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
-    {% endif %}
-    {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-    {% if user == current_user %}
-    <a href="{{ url_for('.edit_profile') }}" class="btn btn-default">编辑资料</a>
-    {% endif %}
-    {% if current_user.is_administrator() %}
-    <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
-        Edit Profile [Admin]</a>
-    {% endif %}
-    <p>
-        Member since {{ moment(user.member_since).format('LLL') }}.
-        Last seen {{ moment(user.last_seen).fromNow() }}.
-    </p>
-</div>
+        {% if current_user.is_administrator() %}
+            <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
+        {% endif %}
+        {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+        {% if user == current_user %}
+            <a href="{{ url_for('.edit_profile') }}" class="btn btn-default">编辑资料</a>
+        {% endif %}
+        {% if current_user.is_administrator() %}
+            <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
+            Edit Profile [Admin]</a>
+        {% endif %}
+        <p>
+            Member since {{ moment(user.member_since).format('LLL') }}.
+            Last seen {{ moment(user.last_seen).fromNow() }}.
+        </p>
+    </div>
 </div>
 {% endblock %}
