--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,12 @@
+.navbar-inverse {
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
+}
+.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
+    color: #555;
+    background-color: #e7e7e7;
+}
 .profile-thumbnail {
     position: absolute;
 }
