--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block title %}AutumnPy{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
+{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
@@ -15,5 +21,8 @@
 </div>
 
 {% include '_posts.html' %}
+<div class="pagination">
+{{ macros.pagination_widget(pagination, '.index') }}
+</div>
 
 {% endblock %}
